# CosyVoice

./: pyproject.toml  test_en.py
